testsuite/tests/patsyn/should_fail/T10426.hs
{-# LANGUAGE PatternSynonyms, ViewPatterns #-}

pattern Id <- (id -> _) where
